--- a/Macro/ps6/MasonTate_PS6.tex
+++ b/Macro/ps6/MasonTate_PS6.tex
@@ -157,12 +157,13 @@
         c_t^2 = \frac{2\gamma}{1+\alpha^{\sigma}} \\
         c_t^1 = \frac{2\gamma}{1+\alpha^{-\sigma}} \\
       \end{gather*}
+    \subsubsection*{(d)}
       Solving for $\mu$
       \begin{gather*}
         \mu_1 = 2(\alpha\beta[\frac{2\gamma}{\alpha^{-\sigma}-1}]^{-\sigma}) \\
         \mu_2 = 2(\alpha\beta[\frac{2\gamma}{\alpha^{\sigma}-1}]^{-\sigma}) \\
       \end{gather*}
-    \subsubsection*{(d)}
+      
 \section*{Question 2}
   \subsection*{Problem}
     Consider the economy in question 1. Assume $\sigma = 1$ (so log utility) and $\gamma = 1$. Assume the following endowments
@@ -205,49 +206,41 @@
     \end{gather*}
 
     Find equilibrium allocations and prices. Does any trade happen in this equilibrium? Why?
-
+  \subsection*{Solution}
+    Trade is not beneficial since prices are equal for both agents. Thus, they are able to be self-sufficient, not requiring the other to consumption smooth.
 \section*{Question 4}
-\subsection*{Problem}
-Consider an economy with two types of household with the following preferences
-\begin{gather*}
-  \sum_{t=0}^{\infty} \beta_i^t \log(c^i_t) \text{ for } i = 1,2
-\end{gather*}
-
-The households are different in their discount factor $0 < \beta_1 < \beta_2 < 1$. Both households have endowment of $e_t = 1$ every period.
-
-\subsection*{Parts}
-\subsubsection*{(a)}
-Define (Arrow-Debreu) competitive equilibrium. And derive household's Euler equation.
-
-\subsubsection*{(b)}
-Write down a social planner problem for some Pareto weights and solve for Pareto efficient allocations (treat Pareto weights as parameters).
-
-\subsubsection*{(c)}
-Use Negishi Method to solve for competitive equilibrium allocations and prices. (hint: you can find weights that correspond to equilibrium by examining feasibility at $t = 0$ (or $t = \infty$))
-
-\subsubsection*{(d)}
-How does $\frac{c^1_t}{c^2_t}$ move over time? What it its limit?
-
-\subsubsection*{(e)}
-Explain what is happening here.
-
+  \subsection*{Problem}
+    Consider an economy with two types of household with the following preferences
+    \begin{gather*}
+      \sum_{t=0}^{\infty} \beta_i^t \log(c^i_t) \text{ for } i = 1,2
+    \end{gather*}
+    The households are different in their discount factor $0 < \beta_1 < \beta_2 < 1$. Both households have endowment of $e_t = 1$ every period.
+  \subsection*{Parts}
+    \subsubsection*{(a)}
+      Define (Arrow-Debreu) competitive equilibrium. And derive household's Euler equation.
+    \subsubsection*{(b)}
+      Write down a social planner problem for some Pareto weights and solve for Pareto efficient allocations (treat Pareto weights as parameters).
+    \subsubsection*{(c)}
+      Use Negishi Method to solve for competitive equilibrium allocations and prices. (hint: you can find weights that correspond to equilibrium by examining feasibility at $t = 0$ (or $t = \infty$))
+    \subsubsection*{(d)}
+      How does $\frac{c^1_t}{c^2_t}$ move over time? What it its limit?
+    \subsubsection*{(e)}
+      Explain what is happening here.
+  \subsection*{Solutions}
+    \subsubsection*{(a)}
+      
 \section*{Question 5 (Bonus)}
-\subsection*{Problem}
-Consider a two period endowment economy with a single consumption good, $c$. The economy is comprised of 2 types of households with identical preferences over consumption in periods $t = 0,1$
-\begin{gather*}
-  u(c^k_0) + u(c^k_1), k = 1,2
-\end{gather*}
-
-Fraction $\eta$ of households are of type 1 and have endowments $(e^1_0, e^2_1) = (1,0)$. The rest of the households are of type 2 and have endowments $(e^2_1, e^2_1) = (0,1)$. There is no production technology and consumption good is non-storable.
-
-\subsection*{Parts}
-\subsubsection*{(a)}
-Let $a_k$ be one period arrow security in this economy $(k = 1,2)$ with associate interest rate $i$. Households have no initial assets. There are no other assets in the economy. Define sequential market competitive equilibrium.
-
-\subsubsection*{(b)}
-Assume $u(c) = \log c$. Find interest rate $i$ as function of $\eta$. What happens to interest rate as $\eta$ increases?
-
-\subsubsection*{(c)}
-Discuss your answer to part (b). What is the intuition?
-
+  \subsection*{Problem}
+    Consider a two period endowment economy with a single consumption good, $c$. The economy is comprised of 2 types of households with identical preferences over consumption in periods $t = 0,1$
+    \begin{gather*}
+      u(c^k_0) + u(c^k_1), k = 1,2
+    \end{gather*}
+    Fraction $\eta$ of households are of type 1 and have endowments $(e^1_0, e^2_1) = (1,0)$. The rest of the households are of type 2 and have endowments $(e^2_1, e^2_1) = (0,1)$. There is no production technology and consumption good is non-storable.
+  \subsection*{Parts}
+    \subsubsection*{(a)}
+      Let $a_k$ be one period arrow security in this economy $(k = 1,2)$ with associate interest rate $i$. Households have no initial assets. There are no other assets in the economy. Define sequential market competitive equilibrium.
+    \subsubsection*{(b)}
+      Assume $u(c) = \log c$. Find interest rate $i$ as function of $\eta$. What happens to interest rate as $\eta$ increases?
+    \subsubsection*{(c)}
+      Discuss your answer to part (b). What is the intuition?
 \end{document}
