--- a/Micro/HW5/hw5.tex
+++ b/Micro/HW5/hw5.tex
@@ -122,6 +122,8 @@
           s_1 > s_2: u(s_1, s_2) = s_2 - 2 \\
           s_1 < s_2: u(s_1, s_2) = s_1 + 2 \\
       \end{gather*}
+    \subsubsection*{(ii)}
+      
 \section*{PS1 - Question 5}
   \subsection*{Problem}
     Consider the following normal form game:
