--- a/Macro/ps6/MasonTate_PS6.tex
+++ b/Macro/ps6/MasonTate_PS6.tex
@@ -130,7 +130,7 @@
         c^i_t: \frac{\beta^t}{{c_t^i}^{\sigma}} - \lambda p_t \\
         c_{t+1}^i: \frac{\beta^{t+1}}{{c_{t+1}^i}^{\sigma}} - \lambda p_{t+1} \\
         \beta\frac{{c_{t+1}^i}^{\sigma}}{{c_t^i}^{\sigma}} = \frac{p_t}{p_{t+1}} \\
-        {c_{t+1}^i}^{\sigma}p_{t+1} = \beta {c_t^i}^{\sigma}p_t
+        {c_{t+1}^i}^{\sigma} = \beta \frac{p_t}{p_{t+1}}{c_t^i}^{\sigma}
       \end{gather*}
     \subsubsection*{(c)}
       \begin{gather*}
@@ -138,7 +138,7 @@
       \end{gather*}
       s.t. 
       \begin{gather*}
-        c_t^1+c_t^2=e_t^1+e_t^2 = 2\gamma^t; \lambda
+        c_t^1+c_t^2=e_t^1+e_t^2 = 2\gamma^t; \frac{\mu}{2}
       \end{gather*}
       Lagrangian:
       \begin{gather*}
@@ -155,13 +155,12 @@
         \alpha\equiv\frac{\alpha_2}{\alpha_1} \Rightarrow c_t^1 = c_t^2 \alpha^{\sigma} \\
         \alpha^{\sigma}c_t^2+c_t^2 = 2\gamma \\
         c_t^2 = \frac{2\gamma}{1+\alpha^{\sigma}} \\
-        c_t^1 = \frac{2\gamma}{1+\alpha^{-\sigma}} \\
+        c_t^1 = \frac{2\gamma\alpha^{\sigma}}{1+\alpha^{\sigma}} \\
       \end{gather*}
     \subsubsection*{(d)}
       Solving for $\mu$
       \begin{gather*}
-        \mu_1 = 2(\alpha\beta[\frac{2\gamma}{\alpha^{-\sigma}-1}]^{-\sigma}) \\
-        \mu_2 = 2(\alpha\beta[\frac{2\gamma}{\alpha^{\sigma}-1}]^{-\sigma}) \\
+        as
       \end{gather*}
       
 \section*{Question 2}
