--- a/Macro/ps6/MasonTate_PS6.tex
+++ b/Macro/ps6/MasonTate_PS6.tex
@@ -160,7 +160,10 @@
     \subsubsection*{(d)}
       Solving for $\mu$
       \begin{gather*}
-        as
+        c_t^i: \frac{\mu_{t}}{2\alpha} = \frac{\beta^t}{c_t^{\sigma}} \\
+        c_{t+1}^i: \frac{\mu_{t+1}}{2\alpha} = \frac{\beta^{t+1}}{c_{t+1}^{\sigma}} \\
+        \\
+        \frac{\mu_{t+1}}{\mu_t} = \beta\frac{c_t}{c_{t+1}} = 
       \end{gather*}
       
 \section*{Question 2}
