--- a/Macro/ps6/MasonTate_PS6.tex
+++ b/Macro/ps6/MasonTate_PS6.tex
@@ -177,6 +177,7 @@
         c_1 = (\frac{2\gamma^t\alpha^\sigma}{1+\beta})^{\frac{1}{\sigma}} \\
         c_2 = (\frac{2\gamma^t}{1+\beta})^{\frac{1}{\sigma}}
       \end{gather*}
+    \subsubsection*{(e)}
       
 \section*{Question 2}
   \subsection*{Problem}
